# Adaptive-Multi-Quantum-Tensor

./: .gitignore  README.md  pyproject.toml
AMQT/: CLAUDE.md  main.py  pyproject.toml
AMQT/amqt-core/: Cargo.toml
AMQT/amqt-core/src/: lib.rs
AMQT/benchmarks/: run_benchmarks.py
AMQT/docs/design-notes/: adaptive_switching.md
AMQT/docs/math/: state_representations.md
AMQT/experiments/: compare_qiskit.py  extended_comparison.py
AMQT/references/prior-art/: README.md
AMQT/src/amqt/: __init__.py
AMQT/src/amqt/core/gates/: standard.py
AMQT/src/amqt/core/state/: metadata.py  quantum_tensor.py
AMQT/src/amqt/error/: __init__.py  fidelity.py  propagation.py
AMQT/src/amqt/kernels/: __init__.py  numba_kernels.py
AMQT/src/amqt/representations/dense/: dense.py
AMQT/src/amqt/representations/mps/: mps.py
AMQT/src/amqt/representations/stabilizer/: stabilizer.py
AMQT/src/amqt/runtime/dispatcher/: switcher.py
AMQT/src/amqt/utils/: __init__.py
AMQT/tests/unit/: test_error.py
amqt-core/: pyproject.toml
amqt-core/src/: lib.rs
benchmarks/: run_benchmarks.py
experiments/: compare_qiskit.py  extended_comparison.py
src/amqt/core/state/: metadata.py  quantum_tensor.py
src/amqt/error/: fidelity.py  propagation.py
src/amqt/kernels/: numba_kernels.py
src/amqt/representations/: base.py
src/amqt/representations/dense/: dense.py
src/amqt/representations/sparse/: sparse.py
src/amqt/runtime/dispatcher/: dispatcher.py
src/amqt/utils/: circuit.py
tests/unit/: test_quantum_tensor.py  test_stabilizer.py
