[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amqt"
version = "0.1.0"
description = "Adaptive Multi-Representation Quantum Tensor — a novel foundational data structure for quantum computation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
  {name = "QauliumAI", email = "janakiram.venkat2008@gmail.com"},
]
keywords = ["quantum", "simulation", "tensor", "mps", "sparse"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Physics",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "matplotlib>=3.10.9",
  "numba>=0.65.1",
  "numpy>=1.26",
  "qiskit>=2.4.2",
  "qiskit-aer>=0.17.2",
  "scipy>=1.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "hypothesis>=6.100",
]
gpu = [
  "cupy-cuda12x>=13.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "maturin>=1.14.1",
]
