[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "amqt-core"
version = "0.1.0"
description = "Rust-compiled gate kernels for AMQT dense statevector simulation"
requires-python = ">=3.10"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "amqt_core"
